--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
   <title>Vendredi 16 Août 2019</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-  <h1> Vendredi 16 Août 2019</h1>
+  <div class="quote">
+    <div class="div">
+      <h1> Il n'y a pas <br/>
+           de hasards, <br/>
+           il n'y a <br/>
+           que des <br/>
+           rendez-vous.
+      </h1>
+      <p id="author"> Paul Eluard </p>
+    </div>
+  </div>
+  <div class="name">
+    <div>
+      <h2 id="clem">Clémentine</h2>
+      <h2>Jean-Baptiste</h2>
+      <p id="date">16.08.2019</p>
+    </div>
+  </div>
+  <div class="place">
+    <div class="div">
+      <img src="images/Maison_Anthouard.jpg" alt="">
+      <p id="ceremonie">Cérémonie civile </p>
+      <p id="mairie">—MAIRIE DE TASSIN-LA-DEMI-LUNE</p>
+      <p id="ceremonie">Cocktail & Dîner</p>
+      <p id="mairie">—MAISON D’ANTHOUARD</p>
+      <p id="vendredi">Vendredi 16 août 2019</p>
+    </div>
+  </div>
+  <div class="program">
+    <div class="div">
+    </div>
+
+  </div>
 
 </body>
 </html>
