--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
   <div class="program">
     <div class="div">
-            <a class="typeform-share link" href="https://jeanbaptiste607058.typeform.com/to/tHtBkR" data-mode="popup" style="color:#FFFFFF;text-decoration:none;font-size:100px;font-family: AGaramondPro;" target="_blank">RSVP </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+            <a class="typeform-share link" href="https://jeanbaptiste607058.typeform.com/to/tHtBkR" data-mode="popup" target="_blank">RSVP </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
     </div>
 
   </div>
